# FileEmulationFramework

./: .gitignore  FileEmulationFramework.sln
Emulator/Unreal/: Build.ps1
Emulator/Unreal/UTOC.Stream.Emulator/: Config.cs  Mod.cs  ModConfig.json  RustApi.cs  UTOC.Stream.Emulator.csproj  UtocEmulator.cs
Emulator/Unreal/fileemu-utoc-stream-emulator/: Cargo.toml
Emulator/Unreal/fileemu-utoc-stream-emulator/resources/: SM_Chair.uasset  pakchunk100-WindowsNoEditor.utoc
Emulator/Unreal/fileemu-utoc-stream-emulator/src/: array.rs  asset_collector.rs  exports.rs  io_package.rs  io_toc.rs  lib.rs  pak_package.rs  partition.rs  serialize.rs  string.rs  toc_factory.rs
Emulator/Unreal/toc-builder-test/: Cargo.toml
Emulator/Unreal/toc-builder-test/src/: main.rs
