[package]
name = "fileemu-utoc-stream-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
byteorder = "1"
cityhasher = "0.1"
libc = "0.2"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation"
]

[lib]
# cdylib for support with Reloaded, rlib for support with other Rust programs for testing
crate-type = ["cdylib", "rlib"]

[lints.rust]
unused_imports = "allow"
unused_must_use = "allow"
unused_variables = "allow"
dead_code = "allow"